# TRS-Vote

./: LICENSE  README.md
app/win_x86_64/: conn.db  settings.ini
docs/: test.html
docs/assets/css/: main.css
docs/assets/js/: something.js
src/: TRSVote.cpp  TRSVote.h  TRSVote.qrc  TRSVote.ui  TRSVote.vcxproj  block.h  helper.cpp  helper.h  icon.rc  main.cpp  mempool.cpp  mempool.h  merkle.h  networkdialog.cpp  networkdialog.h  protocol.h  qutil.h  resource.h  resource1.h  settings.ini  styles.h  trslib.h  util.h  votetree.h
src/cryptolib/: Cargo.toml
src/cryptolib/src/: lib.rs
